objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Did not meet technical requirements</fullName>
                </value>
                <value>
                    <fullName>Poor Price/Performance</fullName>
                </value>
                <value>
                    <fullName>Historical competitor bias</fullName>
                </value>
                <value>
                    <fullName>Add-on to existing system</fullName>
                </value>
                <value>
                    <fullName>Poor Support/Service Experience</fullName>
                </value>
                <value>
                    <fullName>Our delivery not acceptable</fullName>
                </value>
                <value>
                    <fullName>PKI not consulted</fullName>
                </value>
                <value>
                    <fullName>Lack of Applications / Proofs / References</fullName>
                </value>
                <value>
                    <fullName>Cost of extended warranty too expensive</fullName>
                </value>
                <value>
                    <fullName>Lack of Leasing Program</fullName>
                </value>
                <value>
                    <fullName>Poor service experience</fullName>
                </value>
                <value>
                    <fullName>Lack of local support team</fullName>
                </value>
                <value>
                    <fullName>Poor demonstration</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>Used Instrument</fullName>
                </value>
                <value>
                    <fullName>Customer Lost Funding</fullName>
                </value>
                <value>
                    <fullName>Service Hourly Rates</fullName>
                </value>
                <value>
                    <fullName>Service Contract Pricing</fullName>
                </value>
                <value>
                    <fullName>Needs more clinical proof</fullName>
                </value>
                <value>
                    <fullName>Not ready for this technology</fullName>
                </value>
                <value>
                    <fullName>Only wants to have Tech Only, not Full Service.</fullName>
                </value>
                <value>
                    <fullName>Will only do for research purposes</fullName>
                </value>
                <value>
                    <fullName>Instrument Size</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Product performance</fullName>
                </value>
                <value>
                    <fullName>Product not available to sell</fullName>
                </value>
                <value>
                    <fullName>Delivery timeline</fullName>
                </value>
                <value>
                    <fullName>Service availability</fullName>
                </value>
                <value>
                    <fullName>Preferred vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <description>Maps from Lead &quot;Employee Name&quot; field when converted to Contact/Opportunity</description>
        <label>GROW Referred by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Upside__c</fullName>
        <label>Risk/Upside</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beijing Office</fullName>
                </value>
                <value>
                    <fullName>Chengdu Office</fullName>
                </value>
                <value>
                    <fullName>Guangzhou Office</fullName>
                </value>
                <value>
                    <fullName>Hongkong Office</fullName>
                </value>
                <value>
                    <fullName>Shanghai Office</fullName>
                </value>
                <value>
                    <fullName>Shenyang Office</fullName>
                </value>
                <value>
                    <fullName>Taiwan Office</fullName>
                </value>
                <value>
                    <fullName>Wuhan Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <label>Screen Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Species_LST__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LST_Themes__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Human</fullName>
                </value>
                <value>
                    <fullName>Mouse</fullName>
                </value>
                <value>
                    <fullName>Rat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <formula>Account.PKI_Test_Record__c = True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Stage__c</fullName>
        <formula>CASE(TEXT(StageName),&quot;Stage 4 - Objection Handling&quot;,  Amount *0.40,&quot;Stage 5 - Preferred&quot;,  Amount *0.80,&quot;Stage 6 - Negotiating/Forecast&quot;,  Amount *1, Amount)</formula>
        <label>Amount Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Sent_Via__c</fullName>
        <label>Bid Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Purolator</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>e-Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <description>Product</description>
        <formula>Service_Case__r.Asset.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product</inlineHelpText>
        <label>Case - Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <description>Case subject</description>
        <formula>Service_Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case subject</inlineHelpText>
        <label>Case - Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Testing__c</fullName>
        <description>Testing</description>
        <formula>Service_Case__r.Testing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Testing</inlineHelpText>
        <label>Case - Testing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_HAS__c</fullName>
        <inlineHelpText>Please note that HAS isn’t necessarily a product, but rather a problem or situation that must be addressed.</inlineHelpText>
        <label>Customer HAS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fcst_Revenue__c</fullName>
        <inlineHelpText>This field is to be filled by a Sales Manager to assess the risk/upside of an opportunity</inlineHelpText>
        <label>Fcst Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                    <color>#FF0000</color>
                    <label>Risk</label>
                </value>
                <value>
                    <fullName>Upside</fullName>
                    <color>#78C953</color>
                    <label>Upside</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Japan_Dealer__c</fullName>
        <label>Japan Dealer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DAS_APAC_Japan_Dealer_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>株式会社朝日サイエンス</fullName>
                </value>
                <value>
                    <fullName>アズサイエンス株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社アズバイオ</fullName>
                </value>
                <value>
                    <fullName>アズワン株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社アトックス</fullName>
                </value>
                <value>
                    <fullName>株式会社アベバイオロジカルリサーチ</fullName>
                </value>
                <value>
                    <fullName>アルテア技研株式会社</fullName>
                </value>
                <value>
                    <fullName>家田化学薬品株式会社</fullName>
                </value>
                <value>
                    <fullName>家田貿易株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社池田理化</fullName>
                </value>
                <value>
                    <fullName>伊勢久株式会社</fullName>
                </value>
                <value>
                    <fullName>イムノサイエンス株式会社</fullName>
                </value>
                <value>
                    <fullName>岩井化学薬品株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社イング</fullName>
                </value>
                <value>
                    <fullName>株式会社江田商会</fullName>
                </value>
                <value>
                    <fullName>恵比寿サイエンス株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社愛媛洋行</fullName>
                </value>
                <value>
                    <fullName>遠藤科学株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社大熊</fullName>
                </value>
                <value>
                    <fullName>大塚器械株式会社</fullName>
                </value>
                <value>
                    <fullName>尾崎理化株式会社</fullName>
                </value>
                <value>
                    <fullName>オザワ科学株式会社</fullName>
                </value>
                <value>
                    <fullName>オリンパスメディカルサイエンス販売株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社カーク</fullName>
                </value>
                <value>
                    <fullName>片山化学工業株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社カワニシ</fullName>
                </value>
                <value>
                    <fullName>キコーテック株式会社</fullName>
                </value>
                <value>
                    <fullName>キシダ化学株式会社</fullName>
                </value>
                <value>
                    <fullName>株式会社木下理化</fullName>
                </value>
                <value>
                    <fullName>九動株式会社</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_Number__c</fullName>
        <formula>MONTH( DATEVALUE(CreatedDate))</formula>
        <label>Month Number This year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <label>New/Existing Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerManager__c</fullName>
        <description>Lookup to the owners manager</description>
        <label>OwnerManager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pardot_Grade__c</fullName>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Score__c</fullName>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Reagents</fullName>
                </value>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Service Lab</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CWA_Date__c</fullName>
        <label>SAP CWA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Contract__c</fullName>
        <label>SAP Contract #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link FSR Opportunity to Service Case</description>
        <label>Service Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Services Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_china__c</fullName>
        <label>Other Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Marketing Activities</fullName>
                </value>
                <value>
                    <fullName>E-marketing (eblast…)</fullName>
                </value>
                <value>
                    <fullName>Tel-marketing</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>By Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>War_Room_INF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if focus of War Room tracking:
Renamed as per request to Must Win</description>
        <inlineHelpText>Check if focus of War Room tracking:
Must Win</inlineHelpText>
        <label>Must Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Red_Flags__c</fullName>
        <description>SAM Integration</description>
        <label>Red Flags</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Strengths__c</fullName>
        <description>SAM Integration</description>
        <label>Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approvals_INF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Time__c</fullName>
        <label>Approved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <inlineHelpText>See Opportunity Disposition terms Explained attachment  in the Useful Links section for clarity on picklist choices</inlineHelpText>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Loyalty</fullName>
                </value>
                <value>
                    <fullName>Created in Error/Duplicate</fullName>
                </value>
                <value>
                    <fullName>Demo Performed</fullName>
                </value>
                <value>
                    <fullName>Funding not available</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Features/Performance</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 year PM Contract</fullName>
                </value>
                <value>
                    <fullName>1 year IPV Contract</fullName>
                </value>
                <value>
                    <fullName>1 year IQOQ Contract</fullName>
                </value>
                <value>
                    <fullName>1 year Basic Service Contract</fullName>
                </value>
                <value>
                    <fullName>1 year Comprehensive Service Contract</fullName>
                </value>
                <value>
                    <fullName>Mulit-year PM Contract</fullName>
                </value>
                <value>
                    <fullName>Mulit-year IPV Contract</fullName>
                </value>
                <value>
                    <fullName>Mulit-year Basic Service Contract</fullName>
                </value>
                <value>
                    <fullName>Mulit-year Comprehensive Service Contract</fullName>
                </value>
                <value>
                    <fullName>Mulit-year Complex Service Contract</fullName>
                </value>
                <value>
                    <fullName>Mulit-year IQOQ Contract</fullName>
                </value>
                <value>
                    <fullName>Renew Service Contract</fullName>
                </value>
                <value>
                    <fullName>LabMetrix</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dx_APAC_Stage__c</fullName>
        <label>New Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Stage 1 - Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Stage 2 - Qualify</fullName>
                </value>
                <value>
                    <fullName>Stage 3 - Develop</fullName>
                </value>
                <value>
                    <fullName>Stage 4 - Prove</fullName>
                </value>
                <value>
                    <fullName>Stage 5 - Negotiate</fullName>
                </value>
                <value>
                    <fullName>Stage 6 - Implement</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                    <isActive>false</isActive>
                    <label>Closed Won</label>
                </value>
                <value>
                    <fullName>Stage 1 - Qualification</fullName>
                    <isActive>false</isActive>
                    <label>Stage 1 - Qualification</label>
                </value>
                <value>
                    <fullName>Stage 2 - Needs Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Stage 2 - Needs Analysis</label>
                </value>
                <value>
                    <fullName>Stage 3 - Solution Differentiation</fullName>
                    <isActive>false</isActive>
                    <label>Stage 3 - Solution Differentiation</label>
                </value>
                <value>
                    <fullName>Stage 4 - Objection Handling</fullName>
                    <isActive>false</isActive>
                    <label>Stage 4 - Objection Handling</label>
                </value>
                <value>
                    <fullName>Stage 5 - Preferred</fullName>
                    <isActive>false</isActive>
                    <label>Stage 5 - Preferred</label>
                </value>
                <value>
                    <fullName>Stage 6 - Negotiating/Forecast</fullName>
                    <isActive>false</isActive>
                    <label>Stage 6 - Negotiating/Forecast</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <description>Formula to automatically report on PKI Global Regions - APAC, EMEA, Americas</description>
        <formula>IF(ISBLANK(Account.ShippingCountry), &quot;None&quot;,
IF(CONTAINS(&quot;US:CA:PR:VI:PM:AR:BZ:BO:BR:CL:CO:CR:EC:SV:FK:GT:GY:HN:MX:NI:PA:PY:PE:SR:UY:VE:AI:AG:AW:BS:BB:BM:KY:CU:DM:DO:GD:GP:HT:JM:MQ:MS:KN:LC:VC:TC:AN:VG:&quot;, Account.ShippingCountry), &quot;Americas&quot;,
IF(CONTAINS(&quot;AT:BE:CH:DE:DK:ES:FI:FR:GB:IE:IT:LU:NL:NO:PL:SE:AF:BH:BD:BT:IO:KM:IN:IR:KW:MV:NP:OM:PK:QA:SA:LK:AE:YE:DZ:AD:AO:BJ:BW:BF:BI:BV:CM:CV:CF:TD:CG:DJ:EG:GQ:ER:ET:FX:GF:GA:GM:GH:GI:GN:GW:IQ:CI:JO:KE:KZ:LB:LK:LS:LR:LY:NU:MG:MW:ML:MR:MU:YT:MC:MA:MV:MZ:NA:NE:NG:PT:RW:SC:SM:ST:SN:SC:SL:SO:ZA:ES:SH:SD:SZ:TZ:TG:TN:UG:EH:ZM:ZW:CD:VA:AL:AM:AZ:BY:BA:BV:BG:HR:CY:CZ:EE:FO:MK:GE:GR:GL:HU:IS:IL:KZ:KG:LV:LI:LT:MT:MD:ME:RS:RO:RU:SK:SI:SY:TJ:TR:TM:UA:UZ:PS:SS&quot;, Account.ShippingCountry), &quot;EMEA&quot;,
IF(CONTAINS(&quot;JP:AS:AQ:AU:BN:KH:CN:CX:CC:CK:TP:FJ:PF:TF:GU:HM:HK:ID:KI:LA:MO:MY:MH:FM:MN:MM:NR:NC:NZ:NU:NF:KP:MP:PW:PG:PH:PN:WS:SG:SB:KR:TW:TH:TK:TO:TM:TV:UM:VU:VN:WF&quot;, Account.ShippingCountry), &quot;APAC&quot;, &quot;Other&quot;))))</formula>
        <label>Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Interest__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Associate Program</fullName>
                </value>
                <value>
                    <fullName>Partner/Re-seller</fullName>
                </value>
                <value>
                    <fullName>iFinch Trial Account</fullName>
                </value>
                <value>
                    <fullName>iFinch Purchase Request</fullName>
                </value>
                <value>
                    <fullName>Personal Edition</fullName>
                </value>
                <value>
                    <fullName>Team Edition</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Add-on Business</fullName>
                </value>
                <value>
                    <fullName>Support/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <formula>Service_Case__r.Investigation__c</formula>
        <label>Investigation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Preferred__c</fullName>
        <label>PKI -Preferred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quotation_INF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if quotation is needed</description>
        <inlineHelpText>Select if quotation is needed</inlineHelpText>
        <label>Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the Regional sales manager to validate or support an opportunity for the rollup forecast</description>
        <label>RSM Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reason Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Used in a new record Type called &apos;Forecast Snapshot&apos; used for storing static summary data</description>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fxOrderNumber__c</fullName>
        <description>this field is in use for SAP_Order_Summary__c (PKI Order Summary) and converts the text based order number to a numeric value for comparison in L.FLOW 5010</description>
        <formula>VALUE( SAP_Order__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fxOrderNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Close_Date__c</fullName>
        <description>Date on which the bid or tender closes. This is NOT our submission date or the opportunity close date</description>
        <label>Bid Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFI_Percentage__c</fullName>
        <formula>if( ISPICKVAL( Funding__c , &quot;CFI Awarded&quot;) ,&quot;CFI&quot;,if(ISPICKVAL( Funding__c , &quot;CFI Application&quot;),&quot;CFI&quot;,if(ISPICKVAL( Funding__c , &quot;CFI All Monies Received&quot;),&quot;CFI&quot;,&quot;non-CFI&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFI Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleared_RevRec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared RevRec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coversion_Type__c</fullName>
        <label>Coversion Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W-C</fullName>
                </value>
                <value>
                    <fullName>B-C</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_by_LDR__c</fullName>
        <description>SFDC had too many object reference to add a Created by Profile Name field, so this field looks for Profile ID of the person that created the Opportunity.  If this Opportunity was created by a user that has the LDR Profile, then the box will be checked.</description>
        <formula>IF
(
   CreatedBy.ProfileId=&quot;00e3A000001qSuT&quot;, True, False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this Opportunity was created by a user that has the LDR Profile, then the box will be checked.</inlineHelpText>
        <label>Created by LDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_System__c</fullName>
        <label>Current System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>StarLIMS</fullName>
                </value>
                <value>
                    <fullName>ABI SQL LIMS</fullName>
                </value>
                <value>
                    <fullName>LabVantage</fullName>
                </value>
                <value>
                    <fullName>Chemware</fullName>
                </value>
                <value>
                    <fullName>Thermo</fullName>
                </value>
                <value>
                    <fullName>LabWare</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>LabSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>